horizontalBars plotting correctly sorted data with some styling applied. Need to flip one of the sets and offset to prevent overlap.

--- a/Source Code/styles.css
+++ b/Source Code/styles.css
@@ -55,4 +55,14 @@
     background-color: #338cdf;
 }
 
+.citedBars .bar {
+    fill: #505160;
+    opacity: 1;
+}
+
+.citingBars .bar {
+    fill: #598234;
+    opacity: 1;
+}
+
 }
